Complete Netlify Forms setup with spam protection

--- a/public/__forms.html
+++ b/public/__forms.html
@@ -1,8 +1,9 @@
-<!-- Static form stub for Netlify Forms detection -->
 <html><body>
-  <!-- Beta signup form for CODE^X landing page -->
-  <form name="beta-signup" data-netlify="true" hidden>
+  <form name="beta-signup" data-netlify="true" netlify-honeypot="bot-field" hidden>
     <input type="hidden" name="form-name" value="beta-signup" />
-    <input name="email" type="email" />
+    <input type="text" name="name" />
+    <input type="email" name="email" />
   </form>
 </body></html>
+
+
