Fix form endpoint - use public/forms.html

--- a/public/forms.html
+++ b/public/forms.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html><body>
   <form name="beta-signup" method="POST" data-netlify="true" netlify-honeypot="bot-field">
     <input type="hidden" name="form-name" value="beta-signup" />
@@ -7,5 +8,3 @@
     <button>stub-submit</button>
   </form>
 </body></html>
-
-
